--- a/frontend/about.html
+++ b/frontend/about.html
@@ -124,11 +124,8 @@
   
 
   <!-- About Us Section -->
-  <section class="hero">
-    <div class="overlay"></div>
-    <div class="hero-container">
-      <div class="hero-content">
-        <h1 class="page-title">
+  <section class="page-content">
+    <h1>
       <span class="english-text">About Us</span>
       <span class="telugu-text">మా గురించి</span>
     </h1>
