--- a/frontend/events.html
+++ b/frontend/events.html
@@ -125,9 +125,8 @@
   </div>
 
   <!-- Hero Section -->
-  <section class="hero">
-    <div class="hero-content">
-      <h1 class="page-title">
+  <section class="page-content">
+    <h1>
         <span class="english-text">Upcoming Events</span>
         <span class="telugu-text">ఆగామి ఈవెంట్స్</span>
       </h1>
