--- a/frontend/about.html
+++ b/frontend/about.html
@@ -124,11 +124,13 @@
   
 
   <!-- About Us Section -->
-  <section class="page-content">
-    <h1>
-      <span class="english-text">About Us</span>
-      <span class="telugu-text">మా గురించి</span>
-    </h1>
+  <section class="hero">
+    <div class = "overlay"</div>
+    <div class= "hero-container">
+      <h1 class = "page-title">
+        <span class="english-text">About Us</span>
+        <span class="telugu-text">మా గురించి</span>
+      </h1>
 
     <p>
       <span class="english-text">
