--- a/frontend/about.html
+++ b/frontend/about.html
@@ -124,10 +124,8 @@
   
 
   <!-- About Us Section -->
-  <section class="hero">
-    <div class = "overlay"</div>
-    <div class= "hero-container">
-      <h1 class = "page-title">
+  <section class="page-title">
+      <h1>
         <span class="english-text">About Us</span>
         <span class="telugu-text">మా గురించి</span>
       </h1>
