--- a/frontend/about.html
+++ b/frontend/about.html
@@ -1,57 +1,40 @@
-<!-- HTML STARTS -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <!-- Basic Metadata -->
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsive for mobile -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- For broader browser support -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Holy Spirit Prayer House - A place for faith, love, and community outreach.">
   <meta name="keywords" content="Church, Holy Spirit, Prayer, Ministries, Donations">
   <meta name="author" content="Holy Spirit Prayer House">
   <title>Holy Spirit Prayer House | హోలీ స్పిరిట్ ప్రార్థన మందిరం</title>
-  <link rel="icon" type="image/png" href="images/favicon.png"> <!-- Site tab icon -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
 
-  <!-- Google Fonts (used throughout the site) -->
-  <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet"> <!-- Title font -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet"> <!-- Body font -->
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+Telugu&display=swap" rel="stylesheet"> <!-- Telugu font -->
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+Telugu&display=swap" rel="stylesheet">
 
-  <!-- External Stylesheets -->
-  <link rel="stylesheet" href="css/styles.css">        <!-- Main layout and styling -->
-  <link rel="stylesheet" href="css/founder.css">       <!-- Founder section styles -->
-  <link rel="stylesheet" href="css/chatbot.css">       <!-- Chatbot button & popup styles -->
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/founder.css">
+  <link rel="stylesheet" href="css/chatbot.css">
 
-  <!-- Language Toggle Script -->
-  <script>
-    // Save selected language to localStorage and apply it to <body>
-    function toggleLanguage(lang) {
-      localStorage.setItem("preferredLanguage", lang);
-      document.body.classList.remove("english", "telugu");
-      document.body.classList.add(lang);
-    }
-
-    // Load saved language on page load
-    document.addEventListener("DOMContentLoaded", function() {
-      const savedLang = localStorage.getItem("preferredLanguage") || "english";
-      document.body.classList.remove("english", "telugu");
-      document.body.classList.add(savedLang);
-    });
-  </script>
-
-  <!-- Inline Style for Language Toggle + Default Appearance -->
+  <!-- Inline Style for Language Toggle -->
   <style>
     .language-toggle {
-      text-align: center;            /* Center the language buttons */
-      padding: 20px 0;               /* Vertical space */
+      text-align: center;
+      padding: 20px 0;
     }
 
     .language-toggle button {
-      margin: 0 5px;                 /* Space between buttons */
-      padding: 8px 16px;             /* Button padding */
+      margin: 0 5px;
+      padding: 8px 16px;
       font-size: 14px;
       cursor: pointer;
       border: none;
-      background-color: #fff;        /* Bright white background */
+      background-color: #fff;
       font-family: 'Roboto', sans-serif;
       color: #5f6368;
       border-radius: 4px;
@@ -59,33 +42,30 @@
     }
 
     .language-toggle button:hover {
-      background-color: #f8f9fa;     /* Light grey on hover */
-      box-shadow: 0 1px 2px rgba(0,0,0,0.1); /* Soft shadow */
+      background-color: #f8f9fa;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.1);
     }
 
-    /* Language toggle behavior: show only selected language */
-    .telugu .english-text { display: none; }  /* Hide English when Telugu is active */
-    .english .telugu-text { display: none; }  /* Hide Telugu when English is active */
+    .telugu .english-text { display: none; }
+    .english .telugu-text { display: none; }
   </style>
 </head>
 <body class="english">
 
-  <!-- Language Switcher UI -->
-  <div class="language-toggle">
-    <button onclick="toggleLanguage('english')">English</button>
-    <button onclick="toggleLanguage('telugu')">తెలుగు</button>
+  <!-- Language Switcher -->
+  <div class="language-toggle" role="group" aria-label="Language switcher">
+    <button onclick="toggleLanguage('english')" aria-label="Switch to English">English</button>
+    <button onclick="toggleLanguage('telugu')" aria-label="Switch to Telugu">తెలుగు</button>
   </div>
 
-  <!-- Header Section: Logo + Navigation (Desktop + Mobile) -->
+  <!-- Header -->
   <header id="mainHeader">
     <div class="header-container">
       <div class="logo">
         <img src="images/logo.webp" alt="Holy Spirit Prayer House Logo">
       </div>
       <nav class="desktop-nav">
-        <!-- Top navigation links (English + Telugu) -->
         <ul class="nav-links">
-          <!-- Each link contains two spans: English & Telugu -->
           <li><a href="index.html"><span class="english-text">Home</span><span class="telugu-text">హోమ్</span></a></li>
           <li><a href="about.html"><span class="english-text">About</span><span class="telugu-text">గురించి</span></a></li>
           <li><a href="sermons.html"><span class="english-text">Sermons</span><span class="telugu-text">ప్రసంగాలు</span></a></li>
@@ -100,7 +80,7 @@
       <button id="menuButton" class="mobile-menu-button" aria-label="Open Menu">☰</button>
     </div>
 
-    <!-- Mobile version of the nav menu -->
+    <!-- Mobile Navigation -->
     <nav class="mobile-nav" id="mobileNav">
       <ul class="nav-links">
         <li><a href="index.html"><span class="english-text">Home</span><span class="telugu-text">హోమ్</span></a></li>
@@ -123,49 +103,49 @@
 
   
 
-  <!-- About Us Section -->
-  <section class="page-title">
+  <!-- Main Content -->
+  <main>
+    <section class="page-title">
       <h1>
         <span class="english-text">About Us</span>
         <span class="telugu-text">మా గురించి</span>
       </h1>
 
-    <p>
-      <span class="english-text">
-        We are a group of believers, a Church called by the name "Holy Spirit Prayer House" led by Rev. Palaparthi Moses, located in Oduru, West Godavari, Andhra Pradesh, India.
-      </span>
-      <span class="telugu-text">
-        మేము విశ్వాసుల సమూహం, "హోలీ స్పిరిట్ ప్రార్థన మందిరం" అనే పేరు కలిగిన చర్చ్, ఇది రెవ్. పాలపర్తి మోషే సారథ్యంలో ఆంధ్రప్రదేశ్ రాష్ట్రం, పశ్చిమ గోదావరి జిల్లాలోని ఓదూరులో ఉంది.
-      </span>
-    </p>
+      <p>
+        <span class="english-text">
+          We are a group of believers, a Church called by the name "Holy Spirit Prayer House" led by Rev. Palaparthi Moses, located in Oduru, West Godavari, Andhra Pradesh, India.
+        </span>
+        <span class="telugu-text">
+          మేము విశ్వాసుల సమూహం, "హోలీ స్పిరిట్ ప్రార్థన మందిరం" అనే పేరు కలిగిన చర్చ్, ఇది రెవ్. పాలపర్తి మోషే సారథ్యంలో ఆంధ్రప్రదేశ్ రాష్ట్రం, పశ్చిమ గోదావరి జిల్లాలోని ఓదూరులో ఉంది.
+        </span>
+      </p>
 
-    <p>
-      <span class="english-text">
-        We are called according to the promise in Acts 2:38-39:<br>
-        “Repent and be baptized, every one of you, in the name of Jesus Christ for the forgiveness of your sins. And you will receive the gift of the Holy Spirit. The promise is for you and your children and for all who are far off—for all whom the Lord our God will call.”
-      </span>
-      <span class="telugu-text">
-        మనమందరం అపొస్తలుల కార్యములు 2:38-39 వాగ్దానం ప్రకారం పిలవబడ్డాము:<br>
-        “మీ పాపముల క్షమాపణ కొరకు మీలో ప్రతి ఒక్కడు యేసుక్రీస్తు నామమునందు బాప్తిస్మము పొందుడి; మీరు పవిత్రాత్మ యొక్క బహుమతిని పొందుదురు. ఈ వాగ్దానం మీకును మీ పిల్లలకును దూరముగా ఉన్నవారికిని, మన దేవుడైన ప్రభువు పిలిచిన వారందరికిని వర్తించును.”
-      </span>
-    </p>
+      <p>
+        <span class="english-text">
+          We are called according to the promise in Acts 2:38-39:<br>
+          “Repent and be baptized, every one of you, in the name of Jesus Christ for the forgiveness of your sins. And you will receive the gift of the Holy Spirit. The promise is for you and your children and for all who are far off—for all whom the Lord our God will call.”
+        </span>
+        <span class="telugu-text">
+          మనమందరం అపొస్తలుల కార్యములు 2:38-39 వాగ్దానం ప్రకారం పిలవబడ్డాము:<br>
+          “మీ పాపముల క్షమాపణ కొరకు మీలో ప్రతి ఒక్కడు యేసుక్రీస్తు నామమునందు బాప్తిస్మము పొందుడి; మీరు పవిత్రాత్మ యొక్క బహుమతిని పొందుదురు. ఈ వాగ్దానం మీకును మీ పిల్లలకును దూరముగా ఉన్నవారికిని, మన దేవుడైన ప్రభువు పిలిచిన వారందరికిని వర్తించును.”
+        </span>
+      </p>
 
-    <h2>
-      <span class="english-text">Our Mission (What we do)</span>
-      <span class="telugu-text">మా లక్ష్యం (మేము ఏమి చేస్తాము)</span>
-    </h2>
+      <h2>
+        <span class="english-text">Our Mission (What we do)</span>
+        <span class="telugu-text">మా లక్ష్యం (మేము ఏమి చేస్తాము)</span>
+      </h2>
 
-    <p>
-      <span class="english-text">
-        We introduce our God the Father, His Son and our Friend Jesus, and the Holy Spirit. We help people discover hope, develop faith, and demonstrate love by following the way of Jesus through the Word of God (The Bible) and the guidance of the Holy Spirit.
-      </span>
-      <span class="telugu-text">
-        మేము మా పరలోక తండ్రిని, ఆయన కుమారుడైన మరియు మా స్నేహితుడైన యేసును, అలాగే పవిత్రాత్మను పరిచయం చేస్తాము. దేవుని వాక్యం (బైబిల్) మరియు పవిత్రాత్మ సహాయంతో, మేము ప్రజలు ఆశను కనుగొనడంలో, విశ్వాసాన్ని పెంపొందించడంలో, ప్రేమను ప్రదర్శించడంలో సహాయపడతాము.
-      </span>
-    </p>
-  </section>
-
-
+      <p>
+        <span class="english-text">
+          We introduce our God the Father, His Son and our Friend Jesus, and the Holy Spirit. We help people discover hope, develop faith, and demonstrate love by following the way of Jesus through the Word of God (The Bible) and the guidance of the Holy Spirit.
+        </span>
+        <span class="telugu-text">
+          మేము మా పరలోక తండ్రిని, ఆయన కుమారుడైన మరియు మా స్నేహితుడైన యేసును, అలాగే పవిత్రాత్మను పరిచయం చేస్తాము. దేవుని వాక్యం (బైబిల్) మరియు పవిత్రాత్మ సహాయంతో, మేము ప్రజలు ఆశను కనుగొనడంలో, విశ్వాసాన్ని పెంపొందించడంలో, ప్రేమను ప్రదర్శించడంలో సహాయపడతాము.
+        </span>
+      </p>
+    </section>
+  </main>
 
 
 
@@ -192,7 +172,7 @@
     </div>
   </footer>
 
-  <!-- External JavaScript Files -->
+  <!-- Scripts -->
   <script src="js/chatbot.js" defer></script>
   <script src="js/script.js" defer></script>
 </body>
