--- a/frontend/about.html
+++ b/frontend/about.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Basic Metadata -->
+  <!-- Metadata -->
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- For broader browser support -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Holy Spirit Prayer House - A place for faith, love, and community outreach.">
   <meta name="keywords" content="Church, Holy Spirit, Prayer, Ministries, Donations">
   <meta name="author" content="Holy Spirit Prayer House">
+
   <title>Holy Spirit Prayer House | హోలీ స్పిరిట్ ప్రార్థన మందిరం</title>
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="icon" href="images/favicon.png" type="image/png">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+Telugu&display=swap" rel="stylesheet">
 
-  <!-- Stylesheets -->
+  <!-- CSS -->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/founder.css">
   <link rel="stylesheet" href="css/chatbot.css">
 
-  <!-- Inline Style for Language Toggle -->
+  <!-- Inline Language Switch Styling -->
   <style>
     .language-toggle {
       text-align: center;
@@ -35,9 +36,9 @@
       cursor: pointer;
       border: none;
       background-color: #fff;
-      font-family: 'Roboto', sans-serif;
       color: #5f6368;
       border-radius: 4px;
+      font-family: 'Roboto', sans-serif;
       transition: background-color 0.3s, box-shadow 0.3s;
     }
 
@@ -46,13 +47,15 @@
       box-shadow: 0 1px 2px rgba(0,0,0,0.1);
     }
 
-    .telugu .english-text { display: none; }
-    .english .telugu-text { display: none; }
+    .telugu .english-text,
+    .english .telugu-text {
+      display: none;
+    }
   </style>
 </head>
 <body class="english">
 
-  <!-- Language Switcher -->
+  <!-- Language Toggle -->
   <div class="language-toggle" role="group" aria-label="Language switcher">
     <button onclick="toggleLanguage('english')" aria-label="Switch to English">English</button>
     <button onclick="toggleLanguage('telugu')" aria-label="Switch to Telugu">తెలుగు</button>
@@ -64,6 +67,7 @@
       <div class="logo">
         <img src="images/logo.webp" alt="Holy Spirit Prayer House Logo">
       </div>
+
       <nav class="desktop-nav">
         <ul class="nav-links">
           <li><a href="index.html"><span class="english-text">Home</span><span class="telugu-text">హోమ్</span></a></li>
@@ -77,6 +81,8 @@
           <li><a href="donate.html" class="donate-btn"><span class="english-text">Donate Now</span><span class="telugu-text">దానం చేయండి</span></a></li>
         </ul>
       </nav>
+
+      <!-- Mobile Menu Button -->
       <button id="menuButton" class="mobile-menu-button" aria-label="Open Menu">☰</button>
     </div>
 
@@ -96,13 +102,6 @@
     </nav>
   </header>
 
-
-
-
-
-
-  
-
   <!-- Main Content -->
   <main>
     <section class="page-title">
@@ -116,17 +115,17 @@
           We are a group of believers, a Church called by the name "Holy Spirit Prayer House" led by Rev. Palaparthi Moses, located in Oduru, West Godavari, Andhra Pradesh, India.
         </span>
         <span class="telugu-text">
-          మేము విశ్వాసుల సమూహం, "హోలీ స్పిరిట్ ప్రార్థన మందిరం" అనే పేరు కలిగిన చర్చ్, ఇది రెవ్. పాలపర్తి మోషే సారథ్యంలో ఆంధ్రప్రదేశ్ రాష్ట్రం, పశ్చిమ గోదావరి జిల్లాలోని ఓదూరులో ఉంది.
+          మేము విశ్వాసుల సమూహం, "హోలీ స్పిరిట్ ప్రార్థన మందిరం" అనే చర్చ్, ఇది రెవ్. పాలపర్తి మోషే సారథ్యంలో ఆంధ్రప్రదేశ్ రాష్ట్రం, పశ్చిమ గోదావరి జిల్లాలోని ఓదూరులో ఉంది.
         </span>
       </p>
 
       <p>
         <span class="english-text">
-          We are called according to the promise in Acts 2:38-39:<br>
+          We are called according to the promise in Acts 2:38–39:<br>
           “Repent and be baptized, every one of you, in the name of Jesus Christ for the forgiveness of your sins. And you will receive the gift of the Holy Spirit. The promise is for you and your children and for all who are far off—for all whom the Lord our God will call.”
         </span>
         <span class="telugu-text">
-          మనమందరం అపొస్తలుల కార్యములు 2:38-39 వాగ్దానం ప్రకారం పిలవబడ్డాము:<br>
+          మనమందరం అపొస్తలుల కార్యములు 2:38–39 వాగ్దానం ప్రకారం పిలవబడ్డాము:<br>
           “మీ పాపముల క్షమాపణ కొరకు మీలో ప్రతి ఒక్కడు యేసుక్రీస్తు నామమునందు బాప్తిస్మము పొందుడి; మీరు పవిత్రాత్మ యొక్క బహుమతిని పొందుదురు. ఈ వాగ్దానం మీకును మీ పిల్లలకును దూరముగా ఉన్నవారికిని, మన దేవుడైన ప్రభువు పిలిచిన వారందరికిని వర్తించును.”
         </span>
       </p>
@@ -147,27 +146,23 @@
     </section>
   </main>
 
-
-
-
-
-
-
-
-
-  
-
   <!-- Footer -->
   <footer>
     <div class="footer-container">
-      <p>&copy; 2025 Holy Spirit Prayer House |
+      <p>&copy; 2025 Holy Spirit Prayer House | 
         <span class="english-text">All Rights Reserved</span>
         <span class="telugu-text">అన్ని హక్కులు పరిరక్షించబడినవి</span>
       </p>
       <div class="social-icons">
-        <a href="https://www.youtube.com/@pastorpmoses" target="_blank" aria-label="YouTube"><img src="images/youtube.png" alt="YouTube"></a>
-        <a href="https://www.instagram.com/hsph_oduru/" target="_blank" aria-label="Instagram"><img src="images/instagram.png" alt="Instagram"></a>
-        <a href="https://www.facebook.com/holy.jesus132" target="_blank" aria-label="Facebook"><img src="images/facebook.png" alt="Facebook"></a>
+        <a href="https://www.youtube.com/@pastorpmoses" target="_blank" aria-label="YouTube">
+          <img src="images/youtube.png" alt="YouTube">
+        </a>
+        <a href="https://www.instagram.com/hsph_oduru/" target="_blank" aria-label="Instagram">
+          <img src="images/instagram.png" alt="Instagram">
+        </a>
+        <a href="https://www.facebook.com/holy.jesus132" target="_blank" aria-label="Facebook">
+          <img src="images/facebook.png" alt="Facebook">
+        </a>
       </div>
     </div>
   </footer>
